--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 h1, h2, h3 {
-    color: #007BFF;
+    color: #0056b3;
     font-weight: 700;
 }
 
@@ -19,21 +19,29 @@ p {
 
 /* Navbar */
 .navbar {
-    background-color: #0056b3;
+    background-color: #6c757d; /* Grey color */
+}
+
+.navbar-nav {
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
 }
 
 .navbar-brand, .nav-link {
     color: #fff !important;
     font-weight: 500;
+    margin-left: 20px;
+    margin-right: 20px;
     transition: color 0.3s ease;
 }
 
 .nav-link:hover, .nav-link:focus, .navbar-brand:hover, .navbar-brand:focus {
-    color: #ffcc00 !important;
+    color: #ffc107 !important;
 }
 
 .navbar-nav .dropdown-menu {
-    background-color: #007BFF;
+    background-color: #5a6268;
 }
 
 .navbar-nav .dropdown-item {
@@ -41,8 +49,8 @@ p {
 }
 
 .navbar-nav .dropdown-item:hover, .navbar-nav .dropdown-item:focus {
-    background-color: #0056b3;
-    color: #ffcc00;
+    background-color: #495057;
+    color: #ffc107;
 }
 
 /* Section Styles */
@@ -70,7 +78,7 @@ h2 {
 
 /* Footer */
 footer {
-    background-color: #0056b3;
+    background-color: #6c757d; /* Grey color */
     color: #fff;
     text-align: center;
     padding: 20px 0;
